lan thu 6 commit

--- a/src/resources/views/internet.hbs
+++ b/src/resources/views/internet.hbs
@@ -20,7 +20,7 @@
 
     </div>
     <!-- The Modal -->
-    <div class="modal a9" id="myModal">
+    <div class="modal a9" id="internet">
         <div class="modal-dialog " style="margin-top:5%;">
             <div class="modal-content">
 
