--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -1,7 +1,7 @@
 <div class="menu">
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
-        <a class="nav-link" href="/" style="margin-left: 10%;"><img src="img/logovt.png" alt="VIETTEL"
-                style="width: 100px;height:100px;"> <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/" ><img src="img/logovt_tccb.png" alt="VIETTEL"
+                style="width: auto;height:auto;"> <span class="sr-only">(current)</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
